2005-02-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnumeric-functions.

2005-02-13  Danilo Šegan  <dsegan@gmx.net>

	* ignored-lang-list: Added "no" to the list.

2005-02-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed gedit pot file name.

2005-02-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Renamed setup-tools-backends module
	to system-tools-backends.

2005-02-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Renamed openoffice module to ooo-build.

2005-02-08  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Trival fix for gdesklets-extras.
  	  I'm not sure if it works, but intltool-update says "untitled".

2005-02-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved new modules according to final
	module list from proposed to desktop, and the rest to extras.

2005-02-07  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: gimp-tips should use "untitled" as
	  POT name.

2005-02-06  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Correted POT name of gnome-spell,
	  gedit, gal, evolution*, gnome-themes-extras.

2005-02-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gucharmap has been branched.

2005-01-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added sabayon to extras.

2005-01-11  Todd Kulesza  <todd@dropline.net>

	* translation-status.xml: Changed Drivel branch.

2005-01-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtk+ and glib have been branched.

2005-01-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-user-share to proposed.

2005-01-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added cupid to extras.

2005-01-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtksourceview has been branched.
