@@ -2499,6 +2499,17 @@
       </component>
     </version>
   </module>
+  <module name="nautilus-open-terminal">
+    <version release="HEAD">
+      <component name="nautilus-open-terminal" dir="nautilus-open-terminal" group="extras">
+	<podir dir="po"/>
+	<potname name="nautilus-open-terminal.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="nautilus-rc">
     <version release="HEAD">
       <component name="nautilus-rc" dir="nautilus-rc" group="extras">
