@@ -1,3 +1,7 @@
+2005-02-22  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added nautilus-open-terminal.
+
 2005-02-20  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added gnumeric-functions.
